--- a/unit_5/css/style.css
+++ b/unit_5/css/style.css
@@ -6,7 +6,7 @@ header {
 }
 
 nav {
-	text-align: right;
+	text-align: center;
 }
 
 nav a {
@@ -22,7 +22,6 @@ nav a {
 
 #hero {
 	width: 100%;
-	height:400px;
 	padding: 10px;
 }
 
@@ -31,10 +30,12 @@ nav a {
 	background-color: white;
 	color: blue;
 	text-align: center;
-	font-size: 10px;
 	padding: 5px;
 }
-
+#gifts p {
+	display:inline-block;
+	margin: 1em;
+}
 #logo {
 	width 30%;
 	height 15px;		
@@ -89,7 +90,8 @@ h2 {
 
 hr {
 	border: black;
-	height:4px	
+	height:4px;
+	clear: both;
 }
 
 ul {
@@ -125,27 +127,28 @@ p {
 
 footer {
 	background-color:white;
-	padding: 20px
-	font-variant: small caps;
+	padding: 20px;
 	font-family: "courier new", sans-serif;
-}
-
-div {
-	display: block;
+	font-variant: small-caps;
 }
 
 .help {
 	float: left;
+	width: 33.33%;
 }
 
 .social {
-	float: center;
+	float: left;
 }
 
 .newsletter {
-	float: right;
+	float: left;
 }
 
 #wrapper {
 	width: 1200px;
+	margin: auto;
+}
+#points {
+	text-align:center;
 }
