--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -17,7 +17,10 @@ nav a {
 	letter-spacing:1px;
 	font: ProximaNovaSemibold;
 	padding:1em;
-	
+}
+
+nav a:hover {
+	color: #dd0000;
 }
 
 #hero {
@@ -30,19 +33,36 @@ nav a {
 #gifts {
 	background-color: white;
 	color: blue;
-	text-align: center;
-	font-size: 10px;
+	font-size: 16px;
 	padding: 5px;
 }
 
-#logo {
-	width 30%;
-	height 15px;		
+
+#intro {
+	font-size: 20px;
+	text-align: center;
 }
 
 #process {
 	padding: 10px;
 }
+
+.services> h2 {
+	margin: 5em;
+}
+
+.services {
+	width 480px;
+	margin:30px;
+	float: left;
+}
+
+
+.clearfix {
+    overflow: auto;
+}
+
+
 
 img {
 	display: block;
@@ -51,6 +71,7 @@ img {
     border-radius: 4px;
     border: 1px solid #ddd;
 }
+
 
 body {
 	font-family: "Lato", Ariel, sans-serif;
@@ -74,11 +95,6 @@ body {
 main {
 	padding 20px;
 }
-
-.subheaders {
-	border: 3px solid grey;
-	padding: top: 5px;
-}
     
 
 h2 {
@@ -86,6 +102,10 @@ h2 {
 	text-decoration: none;
 	text-align: center;
 }
+
+h3 (color: black
+	text-weight: bold;
+)
 
 hr {
 	border: black;
@@ -128,24 +148,31 @@ footer {
 	padding: 20px
 	font-variant: small caps;
 	font-family: "courier new", sans-serif;
+	clear: both;
 }
 
 div {
 	display: block;
 }
 
-.help {
+#footer {
 	float: left;
-}
-
-.social {
-	float: center;
-}
-
-.newsletter {
-	float: right;
 }
 
 #wrapper {
 	width: 1200px;
 }
+
+.wrapper {
+	background-color: grey;
+	width: 1680px;
+	margin: auto;
+}
+
+span {
+	color: red;
+	font-size: 18px;
+}
+
+
+
