--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -1,25 +1,3 @@
-* { margin:0; padding:0; box-sizing:border-box; }
-
-.site-header__wrapper {
-	background-color: #303030;
-	height: 65px;
-    float: none;
-    margin-left: auto;
-    margin-right: auto;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-flow: row wrap;
-    flex-flow: row wrap;
-    max-width: 52em;
-    padding: 1em;
-}
-
 nav a {
 	font: 14px ProximaNovaSemibold,sans-serif;;
 	margin-right: 25px;
@@ -29,6 +7,20 @@ nav a {
 	float: right;
 }
 
+.alignleft {
+	float: left;
+	color: blue;
+	font-size: 14px;
+	font-family: ProximaNovaSemibold,ProximaNova,Arial,Sans-serif;
+}
+
+.alignright {
+	float: right;
+	color: red;
+	font-size: 14px;
+	font-family: ProximaNovaSemibold,ProximaNova,Arial,Sans-serif;
+}
+
 #hero {
 	width: 100%;
 	height:400px;
@@ -36,20 +28,11 @@ nav a {
 }
 
 
-#gifts {
-	background-color: white;
-	color: blue;
-	font-size: 14px;
-	font-family: ProximaNovaSemibold,ProximaNova,Arial,Sans-serif;
-	height: 30px;
-}
-
-
 #intro {
 	font-size: 16px;
 	font-style: italic
 	text-align: center;
-}
+
 
 #process {
 	padding: 10px;
